--- a/hbm/WebContent/WEB-INF/web.xml
+++ b/hbm/WebContent/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>hbm</display-name>
   <welcome-file-list>
-    <welcome-file>Welcome.html</welcome-file>
+    <welcome-file>Welcome.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
     <servlet-name>single</servlet-name>
@@ -35,5 +35,13 @@
   <servlet-mapping>
     <servlet-name>manage</servlet-name>
     <url-pattern>/manage</url-pattern>
+  </servlet-mapping>
+  <servlet>
+  <servlet-name>Welcome</servlet-name>
+  <jsp-file>/Welcome.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+  <servlet-name>Welcome</servlet-name>
+  <url-pattern>/</url-pattern>
   </servlet-mapping>
 </web-app>
