--- a/hbm/.classpath
+++ b/hbm/.classpath
@@ -43,7 +43,8 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.9.jar"/>
 	<classpathentry kind="lib" path="C:/Users/DELL/Desktop/project/impotant jars/servltes and jsp&apos;s/java-json.jar"/>
 	<classpathentry kind="lib" path="C:/Users/DELL/Desktop/project/impotant jars/servltes and jsp&apos;s/jsp.jar"/>
-	<classpathentry kind="lib" path="C:/Users/DELL/Desktop/project/impotant jars/servltes and jsp&apos;s/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/DELL/Desktop/project/impotant jars/servltes and jsp&apos;s/servlet.jar"/>
+	<classpathentry kind="lib" path="C:/Users/DELL/Desktop/project/impotant jars/servltes and jsp&apos;s/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jstl-1.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
