--- a/hbm/WebContent/WEB-INF/web.xml
+++ b/hbm/WebContent/WEB-INF/web.xml
@@ -53,11 +53,19 @@
     <url-pattern>/display</url-pattern>
   </servlet-mapping>
   <servlet>
-  <servlet-name>DisplayPartner</servlet-name>
-  <jsp-file>/DisplayPartner.jsp</jsp-file>
+    <servlet-name>DisplayPartner</servlet-name>
+    <jsp-file>/DisplayPartner.jsp</jsp-file>
   </servlet>
   <servlet-mapping>
-  <servlet-name>DisplayPartner</servlet-name>
-  <url-pattern>/display_partner</url-pattern>
+    <servlet-name>DisplayPartner</servlet-name>
+    <url-pattern>/display_partner</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>DisplayTeam</servlet-name>
+    <jsp-file>/DisplayTeam.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DisplayTeam</servlet-name>
+    <url-pattern>/display_team</url-pattern>
   </servlet-mapping>
 </web-app>
