--- a/hbm/.classpath
+++ b/hbm/.classpath
@@ -46,5 +46,7 @@
 	<classpathentry kind="lib" path="C:/Users/DELL/Desktop/project/impotant jars/servltes and jsp&apos;s/servlet.jar"/>
 	<classpathentry kind="lib" path="C:/Users/DELL/Desktop/project/impotant jars/servltes and jsp&apos;s/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.mail-1.6.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/DELL/Desktop/project/impotant jars/mail/activation.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
